local-env/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emeris
  namespace: emeris
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,X-Correlation-Id
spec:
  rules:
  - http:
      paths:
      - path: /v1/liquidity(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cosmos-hub
            port:
              number: 1317

      - path: /v1/oracle(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: price-oracle
            port:
              number: 8000

      - path: /v1/dexinfo(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: dexinfo
            port:
              number: 8080

      - path: /v1/cns(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cns-server
            port:
              number: 8000

      - path: /v1(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-server
            port:
              number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emeris-websockets
  namespace: emeris
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /websocket
spec:
  rules:
  - http:
      paths:
      - path: /v1/chain/cosmos-hub/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: cosmos-hub
            port:
              number: 26657

      - path: /v1/chain/akash/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: akash
            port:
              number: 26657
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emeris-dev
  namespace: emeris
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /v1/chain/cosmos-hub/faucet(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cosmos-hub-faucet
            port:
              number: 8000

      - path: /v1/chain/cosmos-hub/rpc(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cosmos-hub
            port:
              number: 26657

      - path: /v1/chain/cosmos-hub/api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cosmos-hub
            port:
              number: 1317

      - path: /v1/chain/akash/faucet(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: akash-faucet
            port:
              number: 8000

      - path: /v1/chain/akash/rpc(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: akash
            port:
              number: 26657

      - path: /v1/chain/akash/api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: akash
            port:
              number: 1317
